@@ -17,6 +17,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+                <configuration>
+                    <release>24</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -47,6 +59,14 @@
                 </executions>
             </plugin>
             </plugins>
+            <resources>
+                <resource>
+                    <directory>.</directory> <!-- means root of the module -->
+                    <includes>
+                        <include>org/pdfsam/i18n/Messages.properties</include>
+                    </includes>
+                </resource>
+            </resources>
     </build>
 
     <dependencies>
